# advent_of_code_lib

./: .gitignore  aoc.py  cli.py  pyproject.toml
lib/: config.py  input_manager.py  solution_runner.py  template_generator.py  templates.py  utils.py
solutions/2024/day1/: solution.py  test_solution.py
solutions/2024/day2/: solution.py  test_solution.py
