[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Rasha Moumneh <rasha@rasha.dev>"]
readme = "README.md"
packages = [{ include = "lib" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
bs4 = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
